--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <div class="navigation cont">
             <div class="logo">
-                <img src="images/logo.png" alt="logo">
+                <img src="./project5/images/logo.png" alt="logo">
             </div>
             <div class="bars">
                 <i class="fa-solid fa-bars"></i>
@@ -22,7 +22,7 @@
         <div class="cont">
             <div class="hero-section  ">
                 <div class="hero-img">
-                    <img src="images/hero_image.png" alt="hero img">
+                    <img src="./projrct5/images/hero_image.png" alt="hero img">
                 </div>
                 <div class="hero-content ">
                     <div class="tag">50% off on all Products</div>
@@ -35,21 +35,21 @@
             </div>
                 <section class="features">
                     <div class="feature">
-                        <img src="icons/discount.png" alt="Discount Vouchers">
+                        <img src="./projrct5/icons/discount.png" alt="Discount Vouchers">
                         <div class="feature-content">
                             <h3>Discount Vouchers</h3>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, nulla.
                     </div>
                     </div>
                     <div class="feature">
-                        <img src=" icons/fresh.png" alt="fresh food">
+                        <img src="./projrct5/icons/fresh.png" alt="fresh food">
                         <div class="feature-content">
                             <h3>Fresh and Healthy food</h3>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, nulla.
                         </div>
                     </div>
                     <div class="feature">
-                        <img src="icons/delivery.png" alt="fresh food">
+                        <img src="./projrct5/icons/delivery.png" alt="fresh food">
                         <div class="feature-content">
                             <h3>Fast Home delivery</h3>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, nulla.
@@ -64,25 +64,25 @@
                     <!-- grid layout -->
                     <div class="grid">
                         <div class="img1">
-                            <img class="grid-img" src="images/grid_image1.png" alt="image 1">
+                            <img class="grid-img" src="./projrct5/images/grid_image1.png" alt="image 1">
                         </div>
                         <div class="img2">
-                            <img class="grid-img" src="images/grid_image2.png" alt="image 2">
+                            <img class="grid-img" src="./project5/images/grid_image2.png" alt="image 2">
                         </div>
                         <div class="img3">
-                            <img class="grid-img" src="images/grid_image3.png" alt="image 3">
+                            <img class="grid-img" src="./project5/images/grid_image3.png" alt="image 3">
                         </div>
                         <div class="img4">
-                            <img class="grid-img" src="images/grid_image4.png" alt="image 4">
+                            <img class="grid-img" src="./project5/images/grid_image4.png" alt="image 4">
                         </div>
                         <div class="img5">
-                            <img class="grid-img" src="images/grid_image5.png" alt="image 5">
+                            <img class="grid-img" src="./project5/images/grid_image5.png" alt="image 5">
                         </div>
                         <div class="img6">
-                            <img class="grid-img" src="images/grid_image6.png" alt="image 6">
+                            <img class="grid-img" src="./project5/images/grid_image6.png" alt="image 6">
                         </div>
                         <div class="img7">
-                            <img class="grid-img" src="images/grid_image7.png" alt="image 7">
+                            <img class="grid-img" src="./project5/images/grid_image7.png" alt="image 7">
                         </div>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
         <footer>
             <div class="footer-cont cont">
                 <div class="footer-logo">
-                    <img src="images/logo.png" alt="logo">
+                    <img src="./project5/images/logo.png" alt="logo">
                 </div>
                 <div class="links">
                     <h3>Main Links</h3>
