--- a/project5/index.html
+++ b/project5/index.html
@@ -22,7 +22,7 @@
         <div class="cont">
             <div class="hero-section  ">
                 <div class="hero-img">
-                    <img src="images/hero_image.png" alt="hero img">
+                    <img src="./images/hero_image.png" alt="hero img">
                 </div>
                 <div class="hero-content ">
                     <div class="tag">50% off on all Products</div>
@@ -35,21 +35,21 @@
             </div>
                 <section class="features">
                     <div class="feature">
-                        <img src="icons/discount.png" alt="Discount Vouchers">
+                        <img src="./icons/discount.png" alt="Discount Vouchers">
                         <div class="feature-content">
                             <h3>Discount Vouchers</h3>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, nulla.
                     </div>
                     </div>
                     <div class="feature">
-                        <img src=" icons/fresh.png" alt="fresh food">
+                        <img src="./icons/fresh.png" alt="fresh food">
                         <div class="feature-content">
                             <h3>Fresh and Healthy food</h3>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, nulla.
                         </div>
                     </div>
                     <div class="feature">
-                        <img src="icons/delivery.png" alt="fresh food">
+                        <img src="./icons/delivery.png" alt="fresh food">
                         <div class="feature-content">
                             <h3>Fast Home delivery</h3>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, nulla.
@@ -64,7 +64,7 @@
                     <!-- grid layout -->
                     <div class="grid">
                         <div class="img1">
-                            <img class="grid-img" src="images/grid_image1.png" alt="image 1">
+                            <img class="grid-img" src="./images/grid_image1.png" alt="image 1">
                         </div>
                         <div class="img2">
                             <img class="grid-img" src="images/grid_image2.png" alt="image 2">
